--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,11 @@ dependencies = [
     "gdown>=5.2.1",
     "imageio-ffmpeg>=0.6.0",
     "matplotlib>=3.10.8",
+    "pandas>=2.3.3",
     "pillow>=12.1.0",
     "pyspng>=0.1.4",
+    "scikit-learn>=1.8.0",
+    "scipy>=1.17.0",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
     "tqdm>=4.67.1",
