--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "scipy>=1.17.0",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
+    "torchviz>=0.0.3",
     "tqdm>=4.67.1",
     "transformers>=4.57.5",
 ]
